updated working dir

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      WORKING_DIR: minigrep
+      WORKING_DIR: add #change this to the rust project name you are developing.
 
     steps:
     - name: Checkout code
