--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Rust CI
 
 on:
   push:
@@ -12,37 +12,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      WORKING_DIR: add #change this to the rust project name you are developing.
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
+    - name: Set up Rust
+      uses: actions/setup-rust@v1
       with:
-        toolchain: stable
-        override: true
+        rust-version: stable
 
-    - name: Check
-      run: make check
-      working-directory: ${{ env.WORKING_DIR }}
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libssl-dev pkg-config
 
-    - name: Format
-      run: make format
-      working-directory: ${{ env.WORKING_DIR }}
+    - name: Run Makefile targets
+      run: |
+        make ci
 
-    - name: Test
-      run: make test
-      working-directory: ${{ env.WORKING_DIR }}
-
-    - name: Release
-      run: make release
-      working-directory: ${{ env.WORKING_DIR }}
-
-    - name: Upload Binary Artifact
-      uses: actions/upload-artifact@v4 #v3 is scheduled for deprecation Nov 30 2024 check marketplace
-      with:
-        name: release-binary
-        path: ${{ env.WORKING_DIR }}/target/release/minigrep
+    - name: Build release version
+      run: |
+        make release
