--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: Rust CI
+name: CI/CD
 
 on:
   push:
@@ -13,23 +13,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Rust
-        uses: actions/setup-rust@v2
-        with:
-          rust-version: stable
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
+        override: true
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev pkg-config
+    - name: Check
+      run: make check
 
-      - name: Run Makefile targets
-        run: |
-          make ci
+    - name: Format
+      run: make format
 
-      - name: Build release version
-        run: |
-          make release
+    - name: Test
+      run: make test
+
+    - name: Release
+      run: cargo build --release
+
+    - name: Upload Binary Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: Rust Binary Artifact
+        path: target/release/week7_test_tool # <-- Ensure the name matches your binary (check toml file)
